--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -11,7 +11,6 @@
 
 <!-- File explorer -->
 <div id="file-explorer" class="row mt-3">
-
     <!-- Files Box -->
     <div id="filebox" class="col-lg-12 col-md-12 col-sm-12 h-100">
         <!-- FilePath -->
@@ -72,6 +71,7 @@
 
         <!-- Appears when the files are loaded -->
         <div id="scrollbox" class="row d-flex">
+
             @if (Model.DisplayList.Count > 0)
             {
                 <div class="row" id="scrollbox-contents">
@@ -204,19 +204,39 @@
 
     <!-- Bottom upload dotted box -->
     <div id="upload-box" class="row mt-3">
+
         <h3>Upload your files</h3>
-        <form method="post" enctype="multipart/form-data" asp-page-handler="Upload">
+        <form method="post" enctype="multipart/form-data" asp-page-handler="Upload" id="upload-box-spinner-hide" style="display:block;">
             <div class="mb-3" id="file-input-box">
                 <input class="form-control" type="file" name="uploadedFiles" id="fileInput" multiple>
-                <input type="submit" class="btn btn-success" value="Upload" disabled>
+                <input type="submit" class="btn btn-success" value="Upload" onclick="showLoading()" disabled>
             </div>
         </form>
+
+        <!-- Loading -->
+        <div id="upload-spinner" style="display: none;">
+            <div class="spinner-border text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
     </div>
 </div>
 
 @{
     <!-- Scripts -->
     <script>
+
+        function showLoading(){
+            document.getElementById("upload-box-spinner-hide").style.display = "none";
+            document.getElementById("upload-spinner").style.display = "block";
+
+        }
+
+
+
+
+
+
 
         // Function to show the rename popup
         function showRenamePopup(id, type) {
@@ -376,4 +396,5 @@
     <!-- Hidden form for sorting -->
     <form id="sortForm" method="post" asp-page-handler="Sort">
     </form>
+
 }
