Setup for sharing users list

--- a/Ethereal Cloud/Pages/SharedWithOthers.cshtml
+++ b/Ethereal Cloud/Pages/SharedWithOthers.cshtml
@@ -63,8 +63,24 @@
                                         </div>
                                     </div>
                                 </button>
-                                
+
                             </div>
+                            
+                            <!-- Users the files is shared with -->
+                            @foreach (var Username in display.SharingUsers)
+                            {
+                                <div>
+                                    <h1>Hello</h1>
+
+                                </div>
+
+
+
+
+                            }
+
+
+                            
                         </div>
                     }
                 </div>
