Fixed button alignment on create folder popup

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -152,7 +152,7 @@
 
                 <!-- Submit button -->
                 <div class="mb-3 ">
-                    <button type="submit" id="create-folder-btn" class=" btn btn-primary">Create Folder</button>
+                    <button type="submit" id="create-folder-btn" class="popup-input-btn btn btn-primary">Create Folder</button>
                     <button type="button" onclick="cancelFolderCreation()" class="popup-input-btn btn btn-secondary">Cancel</button>
                 </div>
             </form>
