Added on hover titles to buttons

--- a/Ethereal Cloud/Pages/Bin.cshtml
+++ b/Ethereal Cloud/Pages/Bin.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using Ethereal_Cloud.Icons
+@using Ethereal_Cloud.Helpers.Icons
 @model Ethereal_Cloud.Pages.BinModel
 @{
     ViewBag.Title = "Bin";
@@ -40,7 +40,7 @@
                             <!-- Buttons for files/folders-->
                             <div id="fileButtonHolder-@display.Id-@display.Type" class="fileButtonHolder" style="">
 
-                                <button id="fileSettingsButton" onclick="restoreFileFolder('@display.Id', '@display.Type')">
+                                <button title="Restore" id="fileSettingsButton" onclick="restoreFileFolder('@display.Id', '@display.Type')">
                                     <img id="fileSettingsImage" src="~/images/menu-icons/cloud-restore.svg" alt="path">
                                 </button>
                             </div>
