--- a/Ethereal Cloud/Pages/SharedWithMe.cshtml
+++ b/Ethereal Cloud/Pages/SharedWithMe.cshtml
@@ -10,6 +10,26 @@
     <script src="/js/scripts.js"></script>
 }
 
+<!-- Success/error messages -->
+<div class="popup-message">
+    @if (ViewData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show mx-auto">
+            <strong>Success!</strong> @ViewData["SuccessMessage"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        </div>
+
+    }
+    @if (ViewData["FailureMessage"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show mx-auto">
+            <strong>Error!</strong> @ViewData["FailureMessage"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        </div>
+    }
+</div>
+
+
 <!-- File explorer -->
 <div id="file-explorer" class="row mt-3">
 
